--- a/glide.yaml
+++ b/glide.yaml
@@ -11,3 +11,7 @@ import:
 - package: github.com/lib/pq
 - package: github.com/jackc/pgx
   version: ^3.0.0
+- package: go.uber.org/zap
+  version: ^1.5.0
+- package: go.uber.org/atomic
+  version: ^1.2.0
