--- a/glide.yaml
+++ b/glide.yaml
@@ -15,3 +15,5 @@ import:
   version: ^1.5.0
 - package: go.uber.org/atomic
   version: ^1.2.0
+- package: github.com/labstack/echo
+  version: ^3.2.1
