--- a/glide.yaml
+++ b/glide.yaml
@@ -17,3 +17,5 @@ import:
   version: ^1.2.0
 - package: github.com/labstack/echo
   version: ^3.2.1
+- package: github.com/kelseyhightower/envconfig
+  version: ^1.3.0
